--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   	  <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
 
-    <div class="hero-container" data-aos="fade-up">   <div class="row align-items-center justify-content-center">
+    <div class="hero-container" data-aos="fade-up">   <div class="row align-items-center justify-content-end">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>A Stable kernel for Poco X3 and Redmi K30 5G</h1>
           <h2 style="margin-top:17px"> <span class="typed" data-typed-items="Powerful as the Stormbreaker, Battery Friendly Kernel, Stable Experience, Beast or Best - you Decide"></span></h2>
